@@ -39,6 +39,8 @@ CRYO_PROJECTS_DIR = 'CRYO_PROJECTS_DIR'
 CRYOSPARC_USER = 'CRYOSPARC_USER'
 CRYOSPARC_USE_SSD = 'CRYOSPARC_USE_SSD'
 CRYOSPARC_MASTER = 'cryosparc_master'
+CRYOSPARC_STANDALONE_INSTALLATION = 'CRYOSPARC_STANDALONE_INSTALLATION'
+CRYOSPARC_DEFAULT_LANE = 'CRYOSPARC_DEFAULT_LANE'
 
 # Supported versions:
 V_UNKNOWN ='v0.0.0'
