@@ -24,11 +24,15 @@
 # *  e-mail address 'scipion@cnb.csic.es'
 # *
 # **************************************************************************
-from .protocols import ProtCryo2D
-
+from pyworkflow.gui import TreeProvider
+from pyworkflow.gui.dialog import ListDialog, showInfo
+from pyworkflow.object import String
+from .protocols import *
+import pyworkflow.viewer as pwviewer
 
 # Suggested number of images per class
 from pyworkflow.wizard import Wizard
+from .utils import getSchedulerLanes, cryosparcValidate
 
 IMAGES_PER_CLASS = 200
 
@@ -51,3 +55,93 @@ class ProtCryo2DNumberOfClassesWizard(Wizard):
 
     def show(self, form, *args):
         form.setVar('numberOfClasses', self._getNumberOfClasses(form.protocol))
+
+
+class ProtCryosparcLanesWizard(Wizard):
+    _targets = [(ProtCryo2D, ['compute_lane']),
+                (ProtCryoSparcRefine3D, ['compute_lane']),
+                (ProtCryoSparcInitialModel, ['compute_lane']),
+                (ProtCryoSparcNonUniformRefine3D, ['compute_lane']),
+                (ProtCryoSparcSubtract, ['compute_lane']),
+                (ProtCryoSparcNaiveLocalRefine, ['compute_lane']),
+                (ProtCryoSparcLocalRefine, ['compute_lane']),
+                (ProtCryoSparcGlobalCtfRefinement, ['compute_lane']),
+                (ProtCryoSparcLocalCtfRefinement, ['compute_lane']),
+                (ProtCryoSparcSharppening, ['compute_lane']),
+                (ProtCryoSparc3DClassification, ['compute_lane']),
+                (ProtCryoSparcHelicalRefine3D, ['compute_lane']),
+                (ProtCryoSparc3DHomogeneousRefine, ['compute_lane']),
+                (ProtCryoSparcNewNonUniformRefine3D, ['compute_lane']),
+                (ProtCryoSparcSymmetryExpansion, ['compute_lane']),
+                (ProtCryoSparcHomogeneousReconstruct, ['compute_lane']),
+                (ProtCryoSparcNew3DClassification, ['compute_lane'])]
+
+    def show(self, form, *args):
+        protocol = form.protocol
+        csValidate = cryosparcValidate()
+        if not csValidate:
+            d = LanesDialogView(form.root, protocol)
+            dlg = d.show()
+            if dlg.resultYes():
+                form.setVar('compute_lane', str(dlg.values[0]))
+        else:
+            showInfo('Info', csValidate[0], form.root)
+
+
+class LanesTreeProvider(TreeProvider):
+    """ Model class that will retrieve the information from cryoSPARC lanes and
+    prepare the columns/rows models required by the TreeDialog GUI.
+    """
+    COL_LANE = 'Lane name'
+
+    def __init__(self, protocol, lanes):
+        self.protocol = protocol
+        TreeProvider.__init__(self)
+        self.selectedDict = {}
+        self.lanes = lanes
+
+    def getObjects(self):
+        objects = []
+
+        for lane in self.lanes:
+            objects.append(String(lane))
+
+        return objects
+
+    def getColumns(self):
+        cols = [(self.COL_LANE, 100)]
+        return cols
+
+    def getObjectInfo(self, obj):
+        objId = obj.getObjValue()
+        key = objId
+        text = key
+
+        return {
+            'key': key,
+            'text': text,
+            'open': False,
+            'value': [text],
+            'selected': False,
+            'parent': None,
+        }
+
+
+class LanesDialogView(pwviewer.View):
+    """ This class implements a view using Tkinter ListDialog
+    and the LanesTreeProvider.
+    """
+    def __init__(self, parent, protocol, **kwargs):
+        self._tkParent = parent
+        self._protocol = protocol
+        self.lanes = self._getComputeLanes()[0]
+        self._provider = LanesTreeProvider(protocol, self.lanes)
+        self.selectedLane = None
+
+    def _getComputeLanes(self):
+        return getSchedulerLanes()
+
+    def show(self):
+        return ListDialog(self._tkParent, 'Lanes display', self._provider,
+                          allowSelect=True, cancelButton=True,
+                          selectOnDoubleClick=True)
